indentation for third level entries in TOC view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,6 +236,9 @@ html, body {
 .toc li {
     list-style: none;
 }
+.third-level-entry {
+  margin-left: 25px;
+}
 
 /* index thumbnails */
 .course-thumbnail {
