--- a/course/templates/course/_tags.html
+++ b/course/templates/course/_tags.html
@@ -1,7 +1,11 @@
 {% if external %}
-<span class="label label-info label-xs">{{ external_user_label|safe }}</span>
+<span class="colortag-active colortag-dark colortag label label-info label-xs">
+    {{ external_user_label|safe }}
+</span>
 {% else %}
-<span class="label label-success label-xs">{{ internal_user_label|safe }}</span>
+<span class="colortag-active colortag-dark colortag label label-success label-xs">
+    {{ internal_user_label|safe }}
+</span>
 {% endif %}
 {% for tag in tags %}{% include "course/_usertag.html" %}{% endfor %}
 <span class="dropdown" id="add-taggings-{{ user_id }}"></span>
