--- a/exercise/templates/exercise/_user_toc.html
+++ b/exercise/templates/exercise/_user_toc.html
@@ -40,7 +40,8 @@
       <span class="label label-info">{% trans 'Opens' %} {{ module.opening_time }}</span> <small>&ndash; {{ module.closing_time }}</small>
     </h4>
     {% endif %}
-    {% include "exercise/_children.html" with children=module.flatted accessible=accessible %}
+
+    {% include "exercise/_children.html" with children=module.children accessible=accessible %}
   </li>
   {% endif %}
   {% endfor %}
