Move the javascript from participants.html into a separate file

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="{% static 'css/main.css' %}" />
         <link rel="stylesheet" href="{% static 'css/submission.css' %}" />
         <link rel="stylesheet" href="{% static 'django_colortag.css' %}" />
+        <script src="{% static 'js/polyfill-find.js' %}"></script>
         <script src="{% static 'js/aplus.js' %}"></script>
         <script src="{% static 'js/translate.min.js' %}"></script>
 
