--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -68,6 +68,7 @@
 <script src="{% static 'add_tagging_dropdown.js' %}"></script>
 {% endif %}
 
+<script src="{% static 'js/buttons_popover.js' %}"></script>
 <script src="{% static 'js/participants.js' %}"></script>
 <script>
  $(function () {
