Show checkboxes only if user is teacher
Oops. Only partially implemented in ed3a898012ba95d129fff61240714d5a75a1546e

--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -34,7 +34,9 @@
 
     <p>
         {% trans "Number of students" %} <strong id="participants-number"></strong>
+        {% if is_teacher %}
         {% trans "of which selected" %} <strong id="selected-number">0</strong>
+        {% endif %}
     </p>
 
     <table class="table table-condensed">
