--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -397,3 +397,25 @@ td.submissions-dropdown {
 table.results-table .category-row {
     font-weight: bold;
 }
+
+/* overlays */
+.overlay-parent {
+    position: relative;
+    padding-bottom: 15px; /* Same as .form-group margin-bottom */
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 15;
+    background-color: #000b;
+}
+
+.overlay .panel {
+    margin: auto;
+    margin-top: 4rem;
+    width: 80%;
+}
