--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -38,101 +38,107 @@
 	</head>
 	<body>
 		<div id="exercise-all">
+      <div class="overlay-parent">
 
-      {% if exercise.is_submittable %}
-			<nav class="exercise-summary navbar navbar-default">
-				<ul class="nav navbar-nav exercise-nav">
-					<li>
-						<a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
-							{% if not exercise.category.confirm_the_level %}{% trans "Points" %}{% endif %}
-							{% points_badge summary %}
-						</a>
-					</li>
-					<li class="dropdown">
-		    			<a class="dropdown-toggle" data-toggle="dropdown" href="#">
-								{% trans "My submissions" %}
-								<span class="badge">
-									{{ summary.get_submission_count }}
-					    			{% if exercise.max_submissions %}
-					    			/ {{ exercise|max_submissions:profile }}
-					    			{% endif %}
-								</span>
-			    			<b class="caret"></b>
-		    			</a>
-				        <ul class="dropdown-menu">
-				        	{% for submission in submissions %}
-				            <li>
-				                <a href="{{ submission|url:'submission-plain' }}">
-				                    {{ forloop.revcounter }}.
-				                    {{ submission.submission_time }}
-				                    {% points_badge submission %}
-				                </a>
-				            </li>
-				        	{% empty %}
-				            <li>
-				                <a href="#">{% trans "No submissions yet" %}</a>
-				            </li>
-				        	{% endfor %}
-				        </ul>
-					</li>
-					{% if not exercise.category.confirm_the_level %}
-					<li class="navbar-text">
-						{% if not exercise.is_closed %}
-							<small>
-							{% if exercise.points_to_pass > 0 %}
-								{% blocktrans with points=exercise.points_to_pass %}{{ points }} points required to pass.{% endblocktrans %}
-							{% endif %}
-							{% if exercise.is_late_submission_open %}
-								{% trans "Late submission deadline" %} {{ module.late_submission_deadline }}
-								{% if module.late_submission_penalty > 0 %}
-								(-{{ module.late_submission_penalty|percent }}%)
-								{% endif %}
-							{% else %}
-								{% trans "Deadline" %} {{ module.closing_time }}
-							{% endif %}
-							</small>
-						{% endif %}
-					</li>
-					{% endif %}
-				</ul>
-				{% if is_course_staff or is_student and exercise.can_show_solutions %}
-				{% if exercise.model_answers %}
-				<a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-model' }}">
-					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
-					{% trans "Show model answer" %}
-				</a>
-				{% endif %}
-				{% endif %}
-				{% if is_course_staff or is_student %}
-				{% if exercise.templates %}
-				<a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-template' }}">
-					<span class="glyphicon glyphicon-file" aria-hidden="true"></span>
-					{% trans "Show exercise template" %}
-				</a>
-				{% endif %}
-				{% endif %}
-				{% if is_course_staff %}
-				<a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'submission-list' }}">
-					<span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-					{% trans "View all submissions" %}
-				</a>
-				{% endif %}
-			</nav>
-      {% endif %}
+        {% if issues and not submission_allowed %}
+          {% include 'exercise/_warnings_overlay.html' %}
+        {% endif %}
 
-			<div class="exercise-response" data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"{% if summary.get_submission_count > 0 %} data-aplus-group-fixed="{{ summary.get_group_id }}"{% endif %}>
-				{% include "_messages.html" %}
-				<div>
-					{% if page.content.strip %}
-					{{ page.content|safe }}
-					{% elif submission and submission.status == "waiting" %}
-					<div class="alert alert-info">
-						{% trans "Your submission has been accepted for grading." %}
-					</div>
-					{% endif %}
-				</div>
-				{% include "exercise/_exercise_wait.html" %}
-			</div>
-		</div>
+        {% if exercise.is_submittable %}
+			  <nav class="exercise-summary navbar navbar-default">
+			    <ul class="nav navbar-nav exercise-nav">
+			      <li>
+				      <a href="{% if summary.get_best_submission %}{{ summary.get_best_submission|url:'submission-plain' }}{% else %}#{% endif %}">
+				        {% if not exercise.category.confirm_the_level %}{% trans "Points" %}{% endif %}
+				        {% points_badge summary %}
+				      </a>
+			      </li>
+			      <li class="dropdown">
+		  	      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+					      {% trans "My submissions" %}
+					        <span class="badge">
+					            {{ summary.get_submission_count }}
+			  		          {% if exercise.max_submissions %}
+			  		          / {{ exercise|max_submissions:profile }}
+			  		          {% endif %}
+					        </span>
+					        <b class="caret"></b>
+		  	      </a>
+			        <ul class="dropdown-menu">
+			          {% for submission in submissions %}
+			          <li>
+			            <a href="{{ submission|url:'submission-plain' }}">
+			              {{ forloop.revcounter }}.
+			              {{ submission.submission_time }}
+			              {% points_badge submission %}
+			            </a>
+			          </li>
+			          {% empty %}
+			          <li>
+			            <a href="#">{% trans "No submissions yet" %}</a>
+			          </li>
+			          {% endfor %}
+			        </ul>
+			      </li>
+			      {% if not exercise.category.confirm_the_level %}
+			      <li class="navbar-text">
+				        {% if not exercise.is_closed %}
+				        <small>
+				          {% if exercise.points_to_pass > 0 %}
+					        {% blocktrans with points=exercise.points_to_pass %}{{ points }} points required to pass.{% endblocktrans %}
+				          {% endif %}
+				          {% if exercise.is_late_submission_open %}
+					        {% trans "Late submission deadline" %} {{ module.late_submission_deadline }}
+					        {% if module.late_submission_penalty > 0 %}
+					        (-{{ module.late_submission_penalty|percent }}%)
+					        {% endif %}
+				          {% else %}
+					        {% trans "Deadline" %} {{ module.closing_time }}
+				          {% endif %}
+				        </small>
+				        {% endif %}
+			      </li>
+			      {% endif %}
+			    </ul>
+			    {% if is_course_staff or is_student and exercise.can_show_solutions %}
+			    {% if exercise.model_answers %}
+			    <a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-model' }}">
+			      <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+			      {% trans "Show model answer" %}
+			    </a>
+			    {% endif %}
+			    {% endif %}
+			    {% if is_course_staff or is_student %}
+			    {% if exercise.templates %}
+			    <a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'exercise-template' }}">
+			      <span class="glyphicon glyphicon-file" aria-hidden="true"></span>
+			      {% trans "Show exercise template" %}
+			    </a>
+			    {% endif %}
+			    {% endif %}
+			    {% if is_course_staff %}
+			    <a class="btn btn-default btn-xs page-modal" href="{{ exercise|url:'submission-list' }}">
+			      <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+			      {% trans "View all submissions" %}
+			    </a>
+			    {% endif %}
+			  </nav>
+        {% endif %}
+
+			  <div class="exercise-response" data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"{% if summary.get_submission_count > 0 %} data-aplus-group-fixed="{{ summary.get_group_id }}"{% endif %}>
+			    {% include "_messages.html" %}
+			    <div>
+			      {% if page.content.strip %}
+			      {{ page.content|safe }}
+			      {% elif submission and submission.status == "waiting" %}
+			      <div class="alert alert-info">
+				      {% trans "Your submission has been accepted for grading." %}
+			      </div>
+			      {% endif %}
+			    </div>
+			    {% include "exercise/_exercise_wait.html" %}
+			  </div>
+		  </div>
+    </div>
 	</body>
 </html>
