LTI exercises can be opened in an iframe as an alternative to a new window.
LTI services (menu items) in the sidebar are not affected by this.

Note: the exercise page UI does not update the points nor the submissions dropdown
after submitting and receiving results from the Tool Provider.

Combine the old LTI service and exercise HTML templates.
Both service and exercise launches use the same template now, which
can be included into full templates that contain site navigation etc.

The JavaScript for automatically launching the service is now
defined in a jQuery plugin instead of inline JS with global variables.

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -46,6 +46,7 @@
 
 {% block scripts %}
 {{ block.super }}
+<script src="{% static 'js/external_launcher.js' %}"></script>
 <script src="{% static 'exercise/poll.js' %}"></script>
 <script src="{% static 'exercise/group.js' %}"></script>
 <script src="{% static 'exercise/chapter.js' %}"></script>
@@ -57,6 +58,11 @@
         $("#submit-progress").removeClass("hide");
     });
 });*/
+
+$(function() {
+    // LTI exercises
+    $('[data-external-launch]').aplusExternalLauncher();
+});
 
 // Add an Ajax exercise event listener to refresh the info column.
 window.addEventListener("message", function (event) {
