--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -15,13 +15,27 @@
 {% include 'exercise/_user_toc.html' %}
 {% endif %}
 
-<div id="exercise-page-content"{% if exercise.is_submittable %} data-aplus-chapter="{{ exercise|url }}" data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"{% if summary.get_submission_count > 0 %} data-aplus-group-fixed="{{ summary.get_group_id }}"{% endif %}{% endif %}>
+<div
+    id="exercise-page-content"
+    {% if exercise.is_submittable %}
+        data-aplus-chapter="{{ exercise|url }}"
+        data-aplus-group="{{ exercise.min_group_size }}-{{ exercise.max_group_size }}"
+        {% if summary.get_submission_count > 0 %}
+            data-aplus-group-fixed="{{ summary.get_group_id }}"
+        {% endif %}
+    {% endif %}
+>
   <div class="overlay-parent">
     {% if issues and not submission_allowed %}
         {% include 'exercise/_warnings_overlay.html' %}
     {% endif %}
-
-    {{ page.content|safe }}
+      <div
+          {% if disable_submit %}
+              data-aplus-disable-submit="true"
+          {% endif %}
+      >
+          {{ page.content|safe }}
+      </div>
 </div>
 
 <div id="submit-progress" class="hide progress">
