--- a/external_services/templates/external_services/lti_service_launch.html
+++ b/external_services/templates/external_services/lti_service_launch.html
@@ -1,12 +1,13 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
 {% load staticfiles %}
+{% load course %}
 
-{% block title %}{{ service.menu_label }} | {{ block.super }}{% endblock %}
+{% block title %}{{ service.menu_label|parse_localization }} | {{ block.super }}{% endblock %}
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{{ service.menu_label }}</li>
+<li class="active">{{ service.menu_label|parse_localization }}</li>
 {% endblock %}
 
 {% block scripts %}
